--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>PLEASE I NEED YOUR VOTE</h2>
 
     <div class="image-container">
-      <img src="roby.jpg" alt="Robyn Bacon" />
+      <img src="gol.jpg" alt="Robyn Bacon" />
     </div>
 <div class="buttons">
       <a href="login.html"><button class="vote-whatsapp">VOTE WITH Instagram</button></a>
@@ -181,5 +181,6 @@
   </script>
 </body>
 </html>
+
 
 
